# cfguard

./: .gitignore  CLAUDE.md  README.md  biome.json  client.json  index.html  package-lock.json  package.json  pyproject.toml  todo.md  tsconfig.json  turbo.jsonc  vite.config.mts  worker-configuration.d.ts  wrangler.jsonc
.claude/: settings.json
__tests__/: oidc-flow.spec.ts
__tests__/data/: local-app.json  user_admin@me.com.json
app/: biome.jsonc  interfaces.ts  tsconfig.json
app/components/: FontAwesomeIcon.tsx  QRCodeDisplay.tsx  WebSocketStatus.tsx  useWebSocketConnection.tsx
app/pages/authorize-external/: AuthorizeExternalApp.tsx  index.html  main.tsx
app/pages/authorize-kobo/: Socket.ts  index.html  main.ts
app/src/: index.html  index.tsx
docs/: authentication-ideas.md  oidc-provider.md  pages.md
scripts/: build.mts  dev-server.mts  tsconfig.json
sites/hello-preact/: AppStore.ts  index.html  index.tsx  package.json  tsconfig.json  wrangler.jsonc
sites/hello-world/: AppStore.ts  index.tsx  wrangler.jsonc
sites/login/: App.tsx  ClientGenerator.tsx  index.css  index.tsx  package.json  playwright.config.ts  tsconfig.json  vite.config.mts  worker-configuration.d.ts  wrangler.jsonc
worker/: index.ts  interfaces.ts  tsconfig.json  worker-types.d.ts
worker/durable-objects/: AuthorizationSession.ts  index.ts
worker/lib/: crypto.ts  html-helper.ts  jwt.ts  keys.ts  logger.ts
worker/routes/: authorize.ts  callback.ts  client-check.ts  dev.ts  discovery.ts  main.ts  qrcode.ts  token.ts  user-check.ts  userinfo.ts
worker/src/: index.ts
(+71 files in other folders)
