[project]
name = "cfguard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean McCollum", email = "anincrediblyshortname@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cloudflare>=4.3.1",
]

[project.scripts]
cfguard = "cfguard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
